# didactic-fortnight

./: .gitignore  Naturals.agda  README.org  flake.nix  haskell-template.cabal  hello-world.agda  helloweb.roc  hie.yaml  lecturel.lagda.md  try-effectful.cabal
.github/workflows/: ci.yaml  update-flake-lock.yaml
little-schemer/: lat?.scm  readme.org
plfa/part1/: Induction.agda  Naturals.agda
src/: Expressions.hs  Free.hs  Labyrinth.hs  Main.hs  TryEffectful.hs
test/: Spec.hs
zigling/: .gitignore
zigling/exercises/: 005_arrays2.zig  025_errors5.zig  026_hello2.zig  034_quiz4.zig  036_enums2.zig  038_structs2.zig  048_methods2.zig  058_quiz7.zig  060_floats.zig  063_labels.zig  064_builtins.zig  065_builtins2.zig  066_comptime.zig  067_comptime2.zig  068_comptime3.zig  071_comptime6.zig  072_comptime7.zig  073_comptime8.zig  075_quiz8.zig  081_anonymous_structs2.zig  082_anonymous_structs3.zig
zigling/zig-cache/o/903dff33e80c90017929dea3bb01e847/: builtin.zig
zigling/zig-cache/o/ddd389ae7144db1cd8463d7077709662/: build
zigling/zig-cache/o/f115c62e86258dbc1454f32aafa9a17b/: 001_hello
