cabal-version:      2.4
name:               try-effectful
version:            0.1.0.0
license:            MIT
copyright:          2022 Yuan Wang
maintainer:         me@yuanwang.ca
author:             Yuan Wang
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  -- mixins:
  --   base hiding (Prelude),
  --   relude (Relude as Prelude, Relude.Container.One),
  --   relude

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base          >=4.13.0.0 && <4.18.0.0
    , data-default
    , directory
    , effectful
    , effectful-th
    , filepath
    , mtl
    , optics-core
    , profunctors
    , relude        >=1.0
    , shower
    , time
    , with-utf8

  hs-source-dirs:     src
  default-language:   Haskell2010

common test-deps
  build-depends:
    , hspec
    , try-effectful

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules: TryEffectful

executable effectful-demo
  import:  shared
  main-is: Main.hs

test-suite try-effectful-test
  import:         shared, test-deps
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: src test
  other-modules:  TryEffectful

-- build-tool-depends: hspec-discover:hspec-discover
